--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
             android:layout_margin="15dp"
             android:layout_weight="1"
             android:backgroundTint="#2196F3"
+            android:onClick="onUser"
             android:text="Korisnik" />
 
     </LinearLayout>
