--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-<<<<<<< HEAD
+
     xmlns:tools="http://schemas.android.com/tools"
-=======
->>>>>>> 388b68aee01692baf40079d2251e694cacd7e3dd
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -12,7 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-<<<<<<< HEAD
+
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +50,8 @@
             android:src="@drawable/ic_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            layout_height="match_parent" />
 
         <ListView
             android:id="@+id/listview"
@@ -63,10 +63,7 @@
             tools:layout_editor_absoluteX="-58dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-=======
-        android:layout_height="match_parent"/>
 
->>>>>>> 388b68aee01692baf40079d2251e694cacd7e3dd
 
 
 
