--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,19 +24,20 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
 
                 <ImageView
+                    android:id="@+id/search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/search_icon"
                     android:layout_gravity="right"
-                    android:layout_marginRight="30dp">
-                </ImageView>
+                    android:layout_marginRight="30dp"
+                    android:src="@drawable/search_icon"></ImageView>
+
                 <ImageView
+                    android:id="@+id/add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/add_icon"
                     android:layout_gravity="right"
-                    android:layout_marginRight="15dp">
-                </ImageView>
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/add_icon"></ImageView>
 
 
             </androidx.appcompat.widget.Toolbar>
