--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -21,7 +22,8 @@
                 android:background="@color/design_default_color_primary"
                 android:elevation="4dp"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
 
                 <ImageView
                     android:id="@+id/search"
@@ -38,6 +40,14 @@
                     android:layout_gravity="right"
                     android:layout_marginRight="15dp"
                     android:src="@drawable/add_icon"></ImageView>
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="5dp"
+                    app:srcCompat="@drawable/usersiconsss"></ImageView>
 
 
             </androidx.appcompat.widget.Toolbar>
