--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,7 +42,7 @@
                     android:src="@drawable/add_icon"></ImageView>
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/users"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="right"
