--- a/app/src/main/res/layout/activity_dodavanje_recepata.xml
+++ b/app/src/main/res/layout/activity_dodavanje_recepata.xml
@@ -8,16 +8,16 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="345dp"
+        android:layout_height="176dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_launcher_background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:layout_width="0dp"
@@ -63,14 +63,13 @@
         app:layout_constraintTop_toBottomOf="@+id/pripremaPlainText" />
 
 
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listaSastojaka"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/sastojciPlanText"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_width="376dp"
+        android:layout_height="258dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sastojciPlanText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
