--- a/app/src/main/res/layout/custom_grid_recept.xml
+++ b/app/src/main/res/layout/custom_grid_recept.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewRecept"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="320dp"
         app:cardElevation="3dp"
         android:layout_margin="4dp"
         app:cardUseCompatPadding="true">
@@ -16,6 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:weightSum="5.5"
+            android:gravity="center"
             android:orientation="vertical"
             android:layout_height="match_parent">
 
@@ -36,7 +37,7 @@
                 <LinearLayout
                     android:id="@+id/prvi"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1.3"
                     android:padding="10dp"
                     android:orientation="vertical">
@@ -59,7 +60,7 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight=".7"
                     android:gravity="center">
 
@@ -82,11 +83,26 @@
                         android:textSize="20dp"
                         android:text="+" />
                 </LinearLayout>
-
-
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <RatingBar
+                  android:id="@+id/rating_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:stepSize="0.5"
+                    android:layout_marginRight="50dp"/>
+
+                <Button
+                    android:id="@+id/button_recenzija"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ocenite" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
