--- a/app/src/main/res/layout/custom_grid_recept_profili.xml
+++ b/app/src/main/res/layout/custom_grid_recept_profili.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewReceptProfil"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="320dp"
         app:cardElevation="3dp"
         android:layout_margin="4dp"
         app:cardUseCompatPadding="true">
@@ -35,15 +35,15 @@
 
                 <LinearLayout
                     android:id="@+id/prviProfil"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="243dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:orientation="vertical"
                     android:padding="10dp">
 
                     <TextView
                         android:id="@+id/nazivReceptaProfil"
-                        android:layout_width="match_parent"
+                        android:layout_width="205dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:text="Naziv"
@@ -51,13 +51,50 @@
 
                     <TextView
                         android:id="@+id/opisReceptaProfil"
-                        android:layout_width="match_parent"
+                        android:layout_width="203dp"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:text="Opis recepta"
                         android:textSize="18sp" />
-                </LinearLayout>
 
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/prosecna_recenzija"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:maxLines="1"
+                    android:text="ocena"
+                    android:textColor="@color/white"
+                    android:background="@color/purple_500"
+                    android:textSize="28sp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"/>
+            </LinearLayout>
+
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <RatingBar
+                    android:id="@+id/rating_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:stepSize="0.5"
+                    android:layout_marginRight="50dp"/>
+                <Button
+                    android:id="@+id/button_recenzija"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:text="ocenite"
+                    android:layout_marginRight="-10dp"/>
 
             </LinearLayout>
         </LinearLayout>
